--- a/pages/login.html
+++ b/pages/login.html
@@ -22,7 +22,7 @@
             <p>Usuario</p>
             <input type="text" name="usuario" id="usuario" placeholder="Ingrese su Usuario">
             <p>Contraseña</p>
-            <input type="text" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña">
+            <input type="password" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña">
             <input type="submit" value="Iniciar Sesion">
          </form>
     </div>
