--- a/pages/evaluacionDesemp.html
+++ b/pages/evaluacionDesemp.html
@@ -25,9 +25,9 @@
 
     <nav>
         <ul>
-            <li><a href="nuevoRegistro.html" target="_self" class="active">Crear Registro</a></li>
+            <li><a href="nuevoRegistro.html" target="_self">Crear Registro</a></li>
             <li><a href="findData.html" target="_self">Consultar Empleados</a></li>
-            <li><a href="evaluacionDesemp.html" target="_self">Evaluacion de desempeño</a></li>         
+            <li><a href="evaluacionDesemp.html" target="_self" class="active">Evaluacion de desempeño</a></li>
             <li><a href="../index.html" target="_self">Cerrar Sesión</a></li>
         </ul>
     </nav>
