--- a/pages/findData.html
+++ b/pages/findData.html
@@ -26,7 +26,8 @@
     <nav>
         <ul>
             <li><a href="nuevoRegistro.html" target="_self">Crear Registro</a></li>
-            <li><a href="findData.html" target="_self" class="active">Consultar Empleados</a></li><br><br>
+            <li><a href="findData.html" target="_self" class="active">Consultar Empleados</a></li>
+            <li><a href="evaluacionDesemp.html" target="_self">Evaluacion de desempeño</a></li>
             <li><a href="../index.html" target="_self">Cerrar Sesión</a></li>
         </ul>
     </nav>
