Cambie metodo de formLogin a post

--- a/pages/login.html
+++ b/pages/login.html
@@ -19,7 +19,7 @@
         
     <div class="login_inbox">
          <h1>Login</h1>
-         <form action="" name="formLogin" method="get" onsubmit="validar()">
+         <form action="" name="formLogin" method="post" onsubmit="validar()">
             <p>Usuario</p>
             <input type="text" name="usuario" id="usuario" placeholder="Ingrese su Usuario">
             <p>Contraseña</p>
