creacion de pagina contacto y mofdificacion de Index

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,19 +7,19 @@
     <title>Inicio IANSA</title>
     <link
       rel="stylesheet"
-      href="images/favicon/Web/icons8-instapaper-material-filled-16.png"
+      href="../images/favicon/Web/icons8-instapaper-material-filled-16.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="../css/estilos.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="index.html" target="_self">Inicio</a>
+        <a href="/index.html" target="_self">Inicio</a>
         <a href="#" target="_self">Acerca de IANSA</a>
-        <a href="/pages/contacto.html" target="_self">Contacto</a>
+        <a href="#" target="_self">Contacto</a>
         <a href="#" target="_self">Servicios</a>
-        <a href="pages/login.html" target="_self" class="split"
+        <a href="login.html" target="_self" class="split"
           >Acceder a mi Cuenta</a
         >
       </nav>
@@ -31,27 +31,25 @@
     </header>
     <main>
       <section class="contenedor inicio">
-        <h2 class="titulo" id="inicio">Información General</h2>
+        <h2 class="titulo" id="inicio">Información de Contacto</h2>
 
-        <div class="contenedor-inicio">
-          <img src="images/sec_inicio_1280.jpg" alt="" class="imagen-inicio" />
+        <div class="contenedor-contacto">
+          <img src="/images/contact_info.jpg" alt="" class="imagen-inicio" po />
           <div class="contenido-textos">
-            <p style="line-height: 140%">
-              Esta página presenta el desarrollo de una aplicación web capaz de
-              gestionar los empleados de una empresa llamada “IANSA”, la cual es
-              capaz de crear, almacenar, actualizar, eliminar clientes
-              (usuarios) y proveerles de su estatus laboral en conjunto con un
-              indicador de desempeño.
-            </p>
-            <br />
-            <p>Universidad del Norte</p>
-            <br>
-            <p>Proyecto MinTIC 2022.</p>
-            <br />
-            <p>
-              Para colocarse en contacto con sus desarrolladores,
-              <span style="color: blue"><a href="/pages/contacto.html" target="_self">clic aquí!</a></span>
-            </p>
+            <dl>
+              <dt style="font-weight: bold">Alfonso Barboza</dt>
+              <dd>adbarboza@uninorte.edu.co</dd>
+              <br />
+              <dt style="font-weight: bold">Sara Prada</dt>
+              <dd>saraprada@uninorte.edu.co</dd>
+              <br />
+              <dt style="font-weight: bold">Roberto Rodriguez</dt>
+              <dd>rodriguezcr@uninorte.edu.co</dd>
+              <br />
+              <dt style="font-weight: bold">Marinela Montalvo</dt>
+              <dd>mdmontalvo@uninorte.edu.co</dd>
+            </dl>
+
             <br />
           </div>
         </div>
