actualizaciones,  contacto y forms

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -48,6 +48,9 @@
               <br />
               <dt style="font-weight: bold">Marinela Montalvo</dt>
               <dd>mdmontalvo@uninorte.edu.co</dd>
+              <br>
+              <dt style="font-weight: bold">Juan Pablo Figueredo</dt>
+              <dd>jpfigueredo@uninorte.edu.co</dd>
             </dl>
 
             <br />
