--- a/forms/nuevoRegistro.html
+++ b/forms/nuevoRegistro.html
@@ -16,7 +16,7 @@
     <div class="topnav">
         <a href="../index.html" target="_self">Inicio</a>
         <a href="#" target="_self">Acerca de IANSA</a>
-        <a href="#" target="_self">Contacto</a>
+        <a href="../pages/contacto.html" target="_self">Contacto</a>
         <a href="#" target="_self">Servicios</a>
         <a href="../pages/login.html" target="_self">Acceder a mi Cuenta</a>
     </div>
@@ -55,7 +55,7 @@
                     </p>
                     <div>
                         <input type="submit" value="Generar Contraseña">
-                        <input type="submit" value="Crear Entrada" class="buttons">
+                        <input type="submit" value="Crear Usuario" class="buttons">
                     </div>
                 </fieldset><br>
 
