--- a/pages/login.html
+++ b/pages/login.html
@@ -12,7 +12,7 @@
 <body class="body_login">
 
     <div class="topnav">
-        <a class="active" href="../index.html">Home</a>
+        <a class="active" href="../index.html">Inicio</a>
     </div>
 
     
