cambios de color en logo index

--- a/forms/bienvenido.html
+++ b/forms/bienvenido.html
@@ -54,7 +54,7 @@
                 <img src="../images/portada.png" alt="portada" width="380" height="250">
             </div><br>
 
-            <p class="justiText">Esperamos que el servicio brindado sea de su agrado. :)</p><br>
+            <p class="justiText2">Esperamos que el servicio brindado sea de su agrado. :)</p><br>
         </form>
 </div>
     
