validacion bien y otras ediciones

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav>
         <a href="index.html" target="_self">Inicio</a>
         <a href="#" target="_self">Acerca de IANSA</a>
-        <a href="/pages/contacto.html" target="_self">Contacto</a>
+        <a href="pages/contacto.html" target="_self">Contacto</a>
         <a href="#" target="_self">Servicios</a>
         <a href="pages/login.html" target="_self" class="split"
           >Acceder a mi Cuenta</a
@@ -31,17 +31,17 @@
     </header>
     <main>
       <section class="contenedor inicio">
-        <h2 class="titulo" id="inicio">Información General</h2>
+        <h2 class="titulo" id="inicio">Informaci&oacute;n General</h2>
 
         <div class="contenedor-inicio">
           <img src="images/sec_inicio_1280.jpg" alt="" class="imagen-inicio" />
           <div class="contenido-textos">
             <p style="line-height: 140%">
-              Esta página presenta el desarrollo de una aplicación web capaz de
+              Esta p&aacute;gina presenta el desarrollo de una aplicaci&oacute;n web capaz de
               gestionar los empleados de una empresa llamada “IANSA”, la cual es
               capaz de crear, almacenar, actualizar, eliminar clientes
               (usuarios) y proveerles de su estatus laboral en conjunto con un
-              indicador de desempeño.
+              indicador de desempe&ntilde;o.
             </p>
             <br />
             <p>Universidad del Norte</p>
@@ -50,7 +50,7 @@
             <br />
             <p>
               Para colocarse en contacto con sus desarrolladores,
-              <span style="color: blue"><a href="/pages/contacto.html" target="_self">clic aquí!</a></span>
+              <span style="color: blue"><a href="/pages/contacto.html" target="_self">&iexcl;clic aquí!</a></span>
             </p>
             <br />
           </div>
