--- a/pages/login.html
+++ b/pages/login.html
@@ -19,12 +19,12 @@
         
     <div class="login_inbox">
          <h1>Login</h1>
-         <form action="" name="formLogin" method="post" onsubmit="validar()">
+         <form action="" name="formLogin" method="post">
             <p>Usuario</p>
             <input type="text" name="usuario" id="usuario" placeholder="Ingrese su Usuario">
-            <p>Contraseña</p>
+            <p>Contrase&ntilde;a</p>
             <input type="password" name="password" id="password" placeholder="Ingrese su Contraseña">
-            <input type="submit" value="Iniciar Sesion" id="boton">            
+            <input onclick="validar()" type="button" value="Iniciar Sesion" id="boton">            
          </form>
     </div>
 
