--- a/forms/nuevoRegistro.html
+++ b/forms/nuevoRegistro.html
@@ -29,8 +29,8 @@
                 <li><a href="bienvenido.html" target="_self">Bienvenido Usuario</a></li>
                 <li><a href="nuevoRegistro.html" target="_self" class="active">Crear Registro</a></li>
                 <li><a href="findData.html" target="_self">Consultar Empleados</a></li>
-                <li><a href="evaluacionDesemp.html" target="_self">Evaluacion de desempeño</a></li>         
-                <li><a href="../index.html" target="_self">Cerrar Sesión</a></li>
+                <li><a href="evaluacionDesemp.html" target="_self">Evaluaci&oacute;n de desempe&ntilde;o</a></li>         
+                <li><a href="../index.html" target="_self">Cerrar Sesi&oacute;n</a></li>
             </ul>
         </nav>
     </div>
@@ -46,11 +46,11 @@
                 <fieldset>
                     <legend> Pre-Registro </legend>
                     <p>
-                        <label>No. Identificación: </label>
+                        <label>No. Identificaci&oacute;n: </label>
                         <input type="text" name="cedula" maxlength="10">
                     </p>
                     <p>
-                        <label>Contraseña: </label>
+                        <label>Contrase&ntilde;a: </label>
                         <input type="text" name="cedula" maxlength="10" disabled>
                     </p>
                     <div>
@@ -78,7 +78,7 @@
                         <input type="text" name="correo" maxlength="100">
                     </p>
                     <p>
-                        <label>Dirección: </label>
+                        <label>Direcci&oacute;n: </label>
                         <input type="text" name="direccion" maxlength="150">
                     </p>
                     <p>
@@ -90,7 +90,7 @@
                         <input type="text" name="contrato">
                     </p>
                     <p>
-                        <label>Fecha de Término: </label>
+                        <label>Fecha de T&eacute;rmino: </label>
                         <input type="date" name="fechaTermino" class="dateSize">
                     </p>
                     <p>
