--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,9 +15,9 @@
   <body>
     <header>
       <nav>
-        <a href="/index.html" target="_self">Inicio</a>
+        <a href="../index.html" target="_self">Inicio</a>
         <a href="#" target="_self">Acerca de IANSA</a>
-        <a href="#" target="_self">Contacto</a>
+        <a href="contacto.html" target="_self">Contacto</a>
         <a href="#" target="_self">Servicios</a>
         <a href="login.html" target="_self" class="split"
           >Acceder a mi Cuenta</a
@@ -31,10 +31,10 @@
     </header>
     <main>
       <section class="contenedor inicio">
-        <h2 class="titulo" id="inicio">Información de Contacto</h2>
+        <h2 class="titulo" id="inicio">Informaci&oacute;n de Contacto</h2>
 
         <div class="contenedor-contacto">
-          <img src="/images/contact_info.jpg" alt="" class="imagen-inicio" po />
+          <img src="../images/contact_info.jpg" alt="" class="imagen-inicio" po />
           <div class="contenido-textos">
             <dl>
               <dt style="font-weight: bold">Alfonso Barboza</dt>
