estilo cc de logo iansa a contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,7 +25,7 @@
       </nav>
 
       <section class="textos_header">
-        <h1>IANSA</h1>
+        <h1 class="logo">IANSA</h1>
         <h2>Plataforma de Gestion de Empleados</h2>
       </section>
     </header>
