--- a/forms/bienvenido.html
+++ b/forms/bienvenido.html
@@ -16,7 +16,7 @@
     <div class="topnav">
         <a href="../index.html" target="_self">Inicio</a>
         <a href="#" target="_self">Acerca de IANSA</a>
-        <a href="#" target="_self">Contacto</a>
+        <a href="../pages/contacto.html" target="_self">Contacto</a>
         <a href="#" target="_self">Servicios</a>
         <a href="../pages/login.html" target="_self">Acceder a mi Cuenta</a>
     </div>
@@ -29,8 +29,8 @@
                 <li><a href="bienvenido.html" target="_self" class="active">Bienvenido Usuario</a></li>
                 <li><a href="nuevoRegistro.html" target="_self">Crear Registro</a></li>
                 <li><a href="findData.html" target="_self">Consultar Empleados</a></li>
-                <li><a href="evaluacionDesemp.html" target="_self">Evaluacion de desempeño</a></li>         
-                <li><a href="../index.html" target="_self">Cerrar Sesión</a></li>
+                <li><a href="evaluacionDesemp.html" target="_self">Evaluaci&oacute;n de desempe&ntilde;o</a></li>         
+                <li><a href="../index.html" target="_self">Cerrar Sesi&oacute;n</a></li>
             </ul>
         </nav>
     </div>
@@ -44,8 +44,8 @@
             <h1>Saludos Usuario</h1><br>
 
             <p class="justiText">
-                Le damos una gran bienvenida a nuestra plataforma encarga del manejo de los datos de 
-                los empleados de la empresa IANSA, aquí puede realizar su consulta de datos y, si también,
+                Le damos una gran bienvenida a nuestra plataforma encargada del manejo de los datos de 
+                los empleados de la empresa IANSA, aqu&iacute; puede realizar su consulta de datos y, si tambi&eacute;n,
                 posee los permisos necesarios, podrá crear, modificar y eliminar cualquier registro
                 que sea pertinente.
             </p><br>
@@ -54,7 +54,7 @@
                 <img src="../images/portada.png" alt="portada" width="380" height="250">
             </div><br>
 
-            <p class="justiText">Esperamos que el servicio brindado sea de su agrado. :)</p><br>
+            <p class="justiText2">Esperamos que el servicio brindado sea de su agrado. :)</p><br>
         </form>
 </div>
     
