--- a/forms/findData.html
+++ b/forms/findData.html
@@ -16,7 +16,7 @@
     <div class="topnav">
         <a href="../index.html" target="_self">Inicio</a>
         <a href="#" target="_self">Acerca de IANSA</a>
-        <a href="#" target="_self">Contacto</a>
+        <a href="../pages/contacto.html" target="_self">Contacto</a>
         <a href="#" target="_self">Servicios</a>
         <a href="../pages/login.html" target="_self">Acceder a mi Cuenta</a>
     </div>
@@ -29,8 +29,8 @@
                 <li><a href="bienvenido.html" target="_self">Bienvenido Usuario</a></li>
                 <li><a href="nuevoRegistro.html" target="_self">Crear Registro</a></li>
                 <li><a href="findData.html" target="_self" class="active">Consultar Empleados</a></li>
-                <li><a href="evaluacionDesemp.html" target="_self">Evaluacion de desempeño</a></li>         
-                <li><a href="../index.html" target="_self">Cerrar Sesión</a></li>
+                <li><a href="evaluacionDesemp.html" target="_self">Evaluaci&oacute;n de desempe&ntilde;o</a></li>         
+                <li><a href="../index.html" target="_self">Cerrar Sesi&oacute;n</a></li>
             </ul>
         </nav>
     </div>
@@ -46,7 +46,7 @@
             <fieldset>
                 <legend> Buscar Empleado </legend>
                 <p>
-                    <label>No. Identificación: </label>
+                    <label>No. Identificaci&oacute;n: </label>
                     <input type="text" name="cedula" maxlength="10">
                 </p>
                 <div>
@@ -57,7 +57,7 @@
             <fieldset>
                 <legend> Datos del Empleado </legend>
                 <p>
-                    <label>No. Identificación: </label>
+                    <label>No. Identificaci&oacute;n: </label>
                     <input type="text" name="cedula" maxlength="10">
                 </p>
                 <p>
@@ -77,7 +77,7 @@
                     <input type="text" name="correo" maxlength="100">
                 </p>
                 <p>
-                    <label>Dirección: </label>
+                    <label>Direcci&oacute;n: </label>
                     <input type="text" name="direccion" maxlength="150">
                 </p>
                 <p>
@@ -89,7 +89,7 @@
                     <input type="text" name="contrato">
                 </p>
                 <p>
-                    <label>Fecha de Término: </label>
+                    <label>Fecha de T&eacute;rmino: </label>
                     <input type="date" name="fechaTermino" class="dateSize">
                 </p>
                 <p>
