--- a/pages/login.html
+++ b/pages/login.html
@@ -7,23 +7,24 @@
     <title>Inicio IANSA</title>
     <link rel="stylesheet" href="../images/favicon/Web/icons8-instapaper-material-filled-16.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/estilos.css">
+    <script src="../js/validar.js"></script>
 </head>
 <body class="body_login">
 
     <div class="topnav">
-        <a class="active" href="../index.html">Home</a>
+        <a class="active" href="../index.html">Inicio</a>
     </div>
 
     
         
     <div class="login_inbox">
          <h1>Login</h1>
-         <form action="">
+         <form action="" name="formLogin" method="post">
             <p>Usuario</p>
             <input type="text" name="usuario" id="usuario" placeholder="Ingrese su Usuario">
-            <p>Contraseña</p>
-            <input type="text" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña">
-            <input type="submit" value="Iniciar Sesion">
+            <p>Contrase&ntilde;a</p>
+            <input type="password" name="password" id="password" placeholder="Ingrese su Contraseña">
+            <input onclick="validar()" type="button" value="Iniciar Sesion" id="boton">            
          </form>
     </div>
 
