Actualizacione en css de fuentes generales, botones de formularios y algunos enlaces rotos

--- a/forms/evaluacionDesemp.html
+++ b/forms/evaluacionDesemp.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="../css/styles.css">
 
-    <title>IANSA</title>
+    <title>Evaluaci&oacute;n</title>
 </head>
 <body>
 
@@ -49,7 +49,7 @@
                     <label>No. Identificaci&oacute;n: </label>
                     <input type="text" name="cedula" maxlength="10">
                 </p>
-                <div>
+                <div class="botones">
                     <input type="submit" value="Buscar" class="buttons">
                 </div>
                 <p>
@@ -79,7 +79,7 @@
                     <label>Valoraci&oacute;n Cualitativa: </label>
                 </p>
                 <p><textarea name="cualitativa" rows="8" cols="50"></textarea></p>
-                <div><input type="submit" value="Guardar Valoraci&oacute;n" class="buttons"></div>
+                <div class="botones"><input type="submit" value="Guardar Valoraci&oacute;n" class="buttons"></div>
             </fieldset>
         </form>
 </div>
