--- a/forms/findData.html
+++ b/forms/findData.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="../css/styles.css">
 
-    <title>IANSA</title>
+    <title>Consultas</title>
 </head>
 <body>
 
@@ -49,7 +49,7 @@
                     <label>No. Identificaci&oacute;n: </label>
                     <input type="text" name="cedula" maxlength="10">
                 </p>
-                <div>
+                <div class="botones">
                     <input type="submit" value="Buscar" class="buttons">
                 </div>
             </fieldset><br>
@@ -114,7 +114,7 @@
                         <option value="final">Usuario Final</option>
                     </select>
                 </p>
-                <div>
+                <div class="botones">
                     <input type="submit" value="Modificar" class="buttons">
                     <input type="submit" value="Guardar Modificaciones" class="buttons">
                     <input type="submit" value="Eliminar Registro" class="buttons">
