--- a/forms/nuevoRegistro.html
+++ b/forms/nuevoRegistro.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="../css/styles.css">
 
-    <title>IANSA</title>
+    <title>Registro Usuarios</title>
 </head>
 <body>
 
@@ -53,7 +53,7 @@
                         <label>Contrase&ntilde;a: </label>
                         <input type="text" name="cedula" maxlength="10" disabled>
                     </p>
-                    <div>
+                    <div class="botones">
                         <input type="submit" value="Generar Contraseña">
                         <input type="submit" value="Crear Usuario" class="buttons">
                     </div>
@@ -115,7 +115,7 @@
                             <option value="final">Usuario Final</option>
                         </select>
                     </p>
-                    <div><input type="submit" value="Guardar Registro" class="buttons"></div>
+                    <div class="botones"><input type="submit" value="Guardar Registro" class="buttons"></div>
                 </fieldset>
             </form>
     </div>
