--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio IANSA</title>
+    <title>Inicio</title>
     <link
       rel="stylesheet"
       href="images/favicon/Web/icons8-instapaper-material-filled-16.png"
@@ -49,7 +49,7 @@
             <br />
             <p>
               Para colocarse en contacto con sus desarrolladores,
-              <span style="color: blue"><a href="/pages/contacto.html" target="_self">&iexcl;clic aquí!</a></span>
+              <span style="color: blue"><a href="pages/contacto.html" target="_self">&iexcl;clic aquí!</a></span>
             </p>
             <br />
           </div>
